--- a/projeto_curso_angular/angular.json
+++ b/projeto_curso_angular/angular.json
@@ -79,7 +79,8 @@
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
-            ]
+            ],
+            "karmaConfig": "karma.conf.js"
           }
         }
       }
