--- a/projeto_curso_angular/package.json
+++ b/projeto_curso_angular/package.json
@@ -8,6 +8,14 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^20.1.0",
+    "@types/jasmine": "^5.1.8",
+    "jasmine-core": "^5.8.0",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage": "^2.2.1",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "typescript": "^5.8.3"
   }
 }
